# blitz_board

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 13942301b9bd_unverified_user_model.py  2c196b4eff67_created_sessions_stats_table.py  3790326da65e_avatar_field.py  3d04c798d39e_user_model.py  435f4a2340a5_updated_magic_links_model.py  48625fa0f108_channels_table.py  59da9090a5b7_friend_requests_table.py  646353f2eda1_initial_migration.py  7cbe43ea2fe3_added_accuracy_field_and_make_timestamp_.py  809457375ab2_added_published_field.py  9bfb1add6354_created_maze_model.py  9f3897231ff9_message_model.py  a6b362244456_updated_channel_table.py  b5ad8a3d2cd2_changed_user_model_tablename.py  ba84877586ec_renamed_user_to_user_id.py  eb3a50d7f1e6_added_friends_table.py  ec6f945dca77_magic_link_model.py
blitz_board/: NGSL_1.2_stats.csv  __init__.py
blitz_board/auth/: __init__.py  models.py  signals.py
blitz_board/auth/templates/: change_avatar.html  edit_profile.html  friend_requests.html  login.html  user_profile.html  verify_registration.html
blitz_board/chat/: __init__.py  models.py
blitz_board/chat/templates/: chat_list.html  chat_page.html
blitz_board/game/: __init__.py  models.py
blitz_board/game/templates/: create_game.html  join_game.html  play_game.html
blitz_board/leaderboard/: __init__.py
blitz_board/leaderboard/templates/: leaderboard.html
blitz_board/main/: __init__.py
blitz_board/main/templates/: home.html
blitz_board/static/: styles.css
blitz_board/static/js/: chat.js  play.js
blitz_board/templates/: base.html
nginx/: Dockerfile  default.conf
social_snake/: __init__.py  auth.py  main.py  models.py  utils.py
social_snake/auth/: __init__.py
social_snake/auth/templates/: login.html  verify_registration.html
social_snake/main/: __init__.py  models.py
social_snake/main/templates/: create_maze.html  edit_maze.html  home.html  play_maze.html
social_snake/static/: editor.js  game.js  styles.css
social_snake/templates/: base.html  landing.html  macros.html
social_snake/templates/auth/: login.html  signup.html  verify_registration.html
typical_typist/auth/: models.py
typical_typist/main/: __init__.py  models.py
typical_typist/static/: game.js  styles.css
typical_typist/templates/: macros.html
