[tool.poetry]
name = "social-snake"
version = "0.1.0"
description = "Puzzle Haven"
authors = ["Rehatbir Singh <rehatbir.singh@gmail.com>"]
readme = "README.md"
packages = [{include = "social_snake"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
email-validator = "^2.0.0.post2"
flask-login = "^0.6.2"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
flask-wtf = "^1.1.1"
yagmail = "^0.15.293"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.262"
alembic = "^1.10.4"

[tool.poetry.scripts]
start = "social_snake:run"

[tool.ruff]
ignore = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
