[tool.poetry]
name = "blitz_board"
version = "0.1.0"
description = "Keyboard Warrior Haven"
authors = ["Rehatbir Singh <rehatbir.singh@gmail.com>"]
readme = "README.md"
#packages = [{include = "blitz_board"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
email-validator = "^2.0.0.post2"
flask-login = "^0.6.2"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
flask-wtf = "^1.1.1"
yagmail = "^0.15.293"
flask-socketio = "^5.3.4"
simple-websocket = "^0.10.1"
pillow = "^10.0.0"
alembic = "^1.10.4"
gunicorn = "^21.2.0"
eventlet = "^0.33.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.262"

[tool.poetry.scripts]
start = "blitz_board:run"

[tool.ruff]
ignore = ["E402", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
