[tool.poetry]
name = "blitz_board"
version = "0.1.0"
description = "Keyboard Warrior Haven"
authors = ["Rehatbir Singh <rehatbir.singh@gmail.com>"]
readme = "README.md"
#packages = [{include = "blitz_board"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0"
psycopg2 = "^2.9"
email-validator = "^2.0.0.post2"
flask-login = { git = "https://github.com/maxcountryman/flask-login", rev = "7d98a49" }
flask = "^2.3"
flask-sqlalchemy = "^3.0"
flask-wtf = "^1.1"
yagmail = "^0.15"
flask-socketio = "^5.3"
simple-websocket = "^0.10"
pillow = "^10.0"
alembic = "^1.10"
gunicorn = "^21.2"
eventlet = "^0.33"

[tool.poetry.group.dev.dependencies]
black = "^23.3"
ruff = "^0.0"
djlint = "^1.34"

[tool.poetry.scripts]
start = "blitz_board:run"

[tool.ruff]
ignore = ["E402", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
